--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+class="container"
   <nav class="light-blue">
     <div class="nav-wrapper container">
       <a href="/" class="brand-logo">Goofspiel</a>
