--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -404,7 +404,7 @@
     margin-top: .2em;
 }
 .playingCards.inText .card span.suit {
-    font-size: 2.5em;
+    font-size: 2em;
 }
 .playingCards.inText .card .suit:after,
 .playingCards.inText .card.joker .rank:after {
@@ -593,3 +593,7 @@
 .playingCards ul.deck li:nth-child(30) { left: 58px; bottom: 29px; }
 .playingCards ul.deck li:nth-child(31) { left: 60px; bottom: 30px; }
 .playingCards ul.deck li:nth-child(32) { left: 62px; bottom: 31px; }
+.historyCell {
+  margin: 0;
+  padding: 0 0;
+}
