--- a/views/partials/_game_v2.ejs
+++ b/views/partials/_game_v2.ejs
@@ -40,22 +40,22 @@
 
       <!-- MIDDLE ROW LEFT -->
       <div class="col s1 playingCards inText">
-        <table class="highlight responsive-table centered">
+        <table class="highlight centered">
 
         <thead>
           <tr>
-            <th class=" historyCell centered">History</th>
+            <th class="historyCell">History</th>
           </tr>
           <tr class="centered">
-              <th class="left-align blue-text historyCell">P1</th>
-              <th class="center-align red-text historyCell">P2</th>
-              <th class="right-align historyCell">Prize</th>
+            <th class="left-align blue-text historyCell">P1</th>
+            <th class="center-align red-text historyCell">P2</th>
+            <th class="right-align historyCell">Prize</th>
           </tr>
         </thead>
         <tbody>
           {{#list turns}}
           <tr>
-            <td class="left-align historyCell">
+            <td class="historyCell">
               <span class="card rank-{{card0}} {{card0Suit}}"><span class="rank">{{card0}}</span>
                 <span class="suit">&{{card0Suit}};</span>
               </span>
