--- a/views/partials/_game_v2.ejs
+++ b/views/partials/_game_v2.ejs
@@ -1,6 +1,6 @@
 <script id="active-game-template" type="text/x-handlebars-template">
 
-  <div class="container section" data-game-id={{game_id}}>
+  <div class="container section gameBoard" data-game-id={{game_id}}>
 
     <!-- VISUAL SECTION DIVIDER -->
     <div class="divider"></div>
@@ -12,7 +12,7 @@
       <div class="col s4 left-align">
         <div id="prizeCards">
           <div class="chip blue lighten-2">
-            <img src="img/avatar.png" alt="Opponent">{{users.0.username}}<span class="new badge blue lighten-2" data-badge-caption="Points">{{game_state.users.1.score}}</span>
+            <img src="img/avatar.png" alt="Opponent">{{users.0.username}}<span class="new badge blue lighten-2" data-badge-caption="Points">{{game_state.users.0.score}}</span>
           </div>
         </div>
       </div>
@@ -35,46 +35,47 @@
     <!-- TOP ROW -->
 
 
-    <!-- MIDDLE ROW -->
+
+    <!-- MIDDLE ROW 1-->
     <div class="row">
 
       <!-- MIDDLE ROW LEFT -->
       <div class="col s1 playingCards inText">
         <table class="highlight centered">
 
-        <thead>
-          <tr>
-            <th class="historyCell">History</th>
-          </tr>
-          <tr class="centered">
-            <th class="left-align blue-text historyCell">P1</th>
-            <th class="center-align red-text historyCell">P2</th>
-            <th class="right-align historyCell">Prize</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#list turns}}
-          <tr>
-            <td class="historyCell">
-              <span class="card rank-{{card0}} {{card0Suit}}"><span class="rank">{{card0}}</span>
+          <thead>
+            <tr>
+              <th class="historyCell">History</th>
+            </tr>
+            <tr class="centered">
+              <th class="left-align blue-text historyCell">P1</th>
+              <th class="center-align red-text historyCell">P2</th>
+              <th class="right-align historyCell">Prize</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#list turns}}
+            <tr>
+              <td class="historyCell">
+                <span class="card rank-{{card0}} {{card0Suit}}"><span class="rank">{{card0}}</span>
                 <span class="suit">&{{card0Suit}};</span>
-              </span>
-            </td>
-            <td class="center-align historyCell">
-              <span class="card rank-{{card1}} {{card1Suit}}"><span class="rank">{{card1}}</span>
-                <span class="suit">&{{card0Suit}};</span>
-              </span>
-            </td>
+                </span>
+              </td>
+              <td class="center-align historyCell">
+                <span class="card rank-{{card1}} {{card1Suit}}"><span class="rank">{{card1}}</span>
+                <span class="suit">&{{card1Suit}};</span>
+                </span>
+              </td>
 
-            <td class="right-align historyCell">
-              <span class="card rank-{{card2}} {{card2Suit}}"><span class="rank">{{prize}}</span>
+              <td class="right-align historyCell">
+                <span class="card rank-{{card2}} {{card2Suit}}"><span class="rank">{{prize}}</span>
                 <span class="suit">&{{prizeSuit}};</span>
-              </span>
-            </td>
-          </tr>
-          {{/list}}
-        </tbody>
-      </table>
+                </span>
+              </td>
+            </tr>
+            {{/list}}
+          </tbody>
+        </table>
 
 
 
@@ -85,73 +86,65 @@
       <div class="col push-s4 center-align valign-wrapper">
         <div class=" playingCards inText">
           <!-- {{#list turns}}
-          <div class="flow-text">
+            <div class="flow-text">
 
-            <span class="card rank-{{card0}} {{card0Suit}}" href=#>
-                  <span class="rank">{{card0}}</span>
-            <span class="suit">&{{card0Suit}};</span>
-            </span>
-            <span class="card rank-{{prize}} {{prizeSuit}}" href=#>
-                  <span class="rank">{{prize}}</span>
-            <span class="suit">&{{prizeSuit}};</span>
-            </span>
-            <span class="card rank-{{card1}} {{card1Suit}}"><span class="rank">{{card1}}</span>
-            <span class="suit">&{{card1Suit}};</span>
-            </span>
+              <span class="card rank-{{card0}} {{card0Suit}}" href=#>
+                    <span class="rank">{{card0}}</span>
+              <span class="suit">&{{card0Suit}};</span>
+              </span>
+              <span class="card rank-{{prize}} {{prizeSuit}}" href=#>
+                    <span class="rank">{{prize}}</span>
+              <span class="suit">&{{prizeSuit}};</span>
+              </span>
+              <span class="card rank-{{card1}} {{card1Suit}}"><span class="rank">{{card1}}</span>
+              <span class="suit">&{{card1Suit}};</span>
+              </span>
 
-          </div>
-          {{/list}} -->
+            </div>
+            {{/list}} -->
 
           <div class="flow-text valign">
 
             <div class="card rank-{{currentTurn.cardsPlayed.0.card}} {{canPlay}}">
-              <span class="rank">{{currentTurn.cardsPlayed.0.card}}</span>
-            {{#if currentTurn.cardsPlayed.0.suit}}
-              <span class="suit">&{{currentTurn.cardsPlayed.0.suit}};</span>
-            {{else}}
-              <span class="suit"></span>
-            {{/if}}
+              <span class="rank">{{currentTurn.cardsPlayed.0.card}}</span> {{#if currentTurn.cardsPlayed.0.suit}}
+              <span class="suit">&{{currentTurn.cardsPlayed.0.suit}};</span> {{else}}
+              <span class="suit"></span> {{/if}}
 
             </div>
-
             <span class="card rank-{{currentTurn.prize}} {{prizeSuit}}" href="#">
-            <span class="rank">{{currentTurn.prize}}</span>
+              <span class="rank">{{currentTurn.prize}}</span>
             <span class="suit">&{{game_state.prizeSuit}};</span>
-          </span>
+            </span>
 
             <div class="card rank-{{currentTurn.cardsPlayed.1.card}} {{currentTurn.cardsPlayed.1.suit}}" href="#">
-              <span class="rank">{{currentTurn.cardsPlayed.1.card}}</span>
-              {{#if currentTurn.cardsPlayed.1.suit}}
-              <span class="suit">&{{currentTurn.cardsPlayed.1.suit}};</span>
-              {{else}}
-              <span class="suit"></span>
-              {{/if}}
+              <span class="rank">{{currentTurn.cardsPlayed.1.card}}</span> {{#if currentTurn.cardsPlayed.1.suit}}
+              <span class="suit">&{{currentTurn.cardsPlayed.1.suit}};</span> {{else}}
+              <span class="suit"></span> {{/if}}
             </div>
           </div>
 
         </div>
       </div>
+
+
       <!-- /MIDDLE ROW RIGHT -->
-    </div>
-    <!-- /MIDDLE ROW -->
 
-
-    <!-- BOTTOM ROW -->
-    <div class="row">
-      <div class="col s12 center-align">
-        <span class="flow-text">
+      <!-- BOTTOM ROW -->
+      <div class="row">
+        <div class="col s12 center-align">
+          <span class="flow-text">
             <div class='playingCards inText' id='playerHand'>
               {{#list game_state.users.0.cardsInHand}}
                 <a class="card rank-{{card}} {{suit}}" href="#" data-card-to-play={{card}}>
                   <span class="rank">{{card}}</span>
-        <span class="suit">&{{suit}};</span>
-        </a>
-        {{/list}}
+          <span class="suit">&{{suit}};</span>
+          </a>
+          {{/list}}
+        </div>
+        </span>
       </div>
-      </span>
-    </div>
-  </div>
-  <!-- /BOTTOM ROW -->
+      </div>
+    <!-- /BOTTOM ROW -->
 
 
 
