increased history font size

--- a/views/partials/_game_v2.ejs
+++ b/views/partials/_game_v2.ejs
@@ -68,7 +68,7 @@
               </td>
 
               <td class="right-align historyCell">
-                <span class="card rank-{{card2}} {{card2Suit}}"><span class="rank">{{prize}}</span>
+                <span class="card rank-{{prize}} {{prizeSuit}}"><span class="rank">{{prize}}</span>
                 <span class="suit">&{{prizeSuit}};</span>
                 </span>
               </td>
