recommit close button. dont know why it didnt in the first place...

--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -600,3 +600,13 @@
   font-size: 95%;
   text-align: center;
 }
+
+.game-close {
+  padding: 0;
+  height: auto;
+  font-size: 12px;
+}
+
+.section {
+  margin-top: 50px;
+}
