--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,41 +1,42 @@
-<nav class="navbar">
-  <p class="title">Goofspiel</p>
 
-  <ul id="slide-out" class="side-nav">
+<nav class="navbar center">
+    <p class="title">Goofspiel</p>
 
-    <% if (user) { %>
-      <p class="intro">Hello, <%= user.name %></p>
-    <% } else { %>
-      <p class="intro">Hello</p>
-    <% } %>
+    <ul id="slide-out" class="side-nav">
 
-    <li><div class="divider"></div></li>
+      <% if (user) { %>
+        <p class="intro">Hello, <%= user.name %></p>
+      <% } else { %>
+        <p class="intro">Hello</p>
+      <% } %>
 
-    <% if (user) { %>
-      <button class="btn wafes-effect light-blue new-game btn-nav" type="button"
-      name="action">New Game</button>
       <li><div class="divider"></div></li>
-      <button class="btn wafes-effect light-blue get-stats btn-nav" type="button"
-      name="action" data-target="modal1">Stats</button>
-    <% } %>
 
-    <% if (user) { %>
+      <% if (user) { %>
+        <button class="btn wafes-effect light-blue new-game btn-nav" type="button"
+        name="action">New Game</button>
+        <li><div class="divider"></div></li>
+        <button class="btn wafes-effect light-blue get-stats btn-nav" type="button"
+        name="action" data-target="modal1">Stats</button>
+      <% } %>
+
+      <% if (user) { %>
+        <li><div class="divider"></div></li>
+        <form class="form" method="POST" action="/api/users/logout">
+          <button class="btn waves-effect light-blue btn-nav" type="submit" name="action">Sign Out</button>
+        </form>
+      <% } %>
+
+      <% if (!user) { %>
+        <form class="form" method="POST" action="/api/users/login">
+          <input class="username" name="username" type="text" placeholder="Username">
+          <button class="btn waves-effect light-blue btn-nav" type="submit" name="action">Sign In</button>
+        </form>
+      <% } %>
+
       <li><div class="divider"></div></li>
-      <form class="form" method="POST" action="/api/users/logout">
-        <button class="btn waves-effect light-blue btn-nav" type="submit" name="action">Sign Out</button>
-      </form>
-    <% } %>
 
-    <% if (!user) { %>
-      <form class="form" method="POST" action="/api/users/login">
-        <input class="username" name="username" type="text" placeholder="Username">
-        <button class="btn waves-effect light-blue btn-nav" type="submit" name="action">Sign In</button>
-      </form>
-    <% } %>
-
-    <li><div class="divider"></div></li>
-
-  </ul>
+    </ul>
 
   <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
 
@@ -44,10 +45,9 @@
         <p class="title-modal">Stats</p>
       </div>
       <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat thanks">Thanks,</a>
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat thanks">Thanks</a>
       </div>
     </div>
-
 </nav>
 
 <script id="stats-template" type="text/x-handlebars-template">
